--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,13 @@
 {
   "name": "troopjs-ajax",
-  "authors": [
-    "Mikael Karon"
-  ],
-  "description": "TroopJS ajax module",
-  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test"
+    "bower_components"
   ],
   "dependencies": {
-    "troopjs-core": "~3",
-    "troopjs-util": "~3",
-    "jquery": ">=1.8.1"
+    "troopjs-core": "^5",
+    "mu-merge": "^0",
+    "jquery": ">=1.8.1 <4"
   }
 }
