--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "troopjs": ">=3.0.0-pr.9",
-    "mu-merge": "^0",
+    "troopjs": "^3",
     "jquery": ">=1.8.1 <4"
   }
 }
